# clickclack

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh
assets/switchtypes/: desc.json
src/: config.rs  keyboard.rs  main.rs  service.rs
src/audio/: mod.rs  sound.rs
src/input/: keyboard.rs  mod.rs
src/platform/: macos.rs
src/ui/: mod.rs  tray.rs
