[package]
name = "clickclack"
version = "0.3.0"
edition = "2021"
description = "A mechanical keyboard sound simulator for macOS"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
license = "MIT"
repository = "https://github.com/cesarferreira/clickclack"
homepage = "https://github.com/cesarferreira/clickclack"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "assets/**/*",
    "README.md",
    "LICENSE"
]

[features]
cargo-clippy = []

[dependencies]
# Audio synthesis and playback
cpal = "0.15.2"
rodio = "0.17.3"

# GUI and system tray
tao = "0.20.0"
tray-icon = "0.9.0"
image = "0.24.7"

# Event handling
rdev = "0.5.3"  # For global keyboard events
once_cell = "1.19.0"
parking_lot = "0.12.1"

# Error handling and utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
directories = "5.0.1"

# HTTP and ZIP handling
ureq = "2.9.1"
zip = "0.6.6"
dirs = "5.0.1"

cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
serde_json = "1.0"
simple_logger = "4.3"

clap = { version = "4.5.1", features = ["derive"] }
plist = "1.6"  # For plist file manipulation

[build-dependencies]
embed-resource = "2.4.0"  # For embedding icons on Windows

[package.metadata.bundle]
name = "ClickClack"
identifier = "com.clickclack.app"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2024. All rights reserved."
category = "public.app-category.utilities"
short_description = "Mechanical keyboard sound simulator"

